[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
prettytable-rs = "0.10"
